Fixed invalid overflow value after DIV

--- a/dcpu.htm
+++ b/dcpu.htm
@@ -492,6 +492,7 @@
       }
       registers.SP = 0;
       cycles = 0;
+      keypointer = 0;
       assemble();
     }
     var logger = function(offset, msg, fatal) {
